# Viz3DVideo

./: .buildinfo  .gitignore  README.md  genindex.html  searchindex.js  version.html  viz3dvideo.scatter.html  viz3dvideo.surf.html
.github/workflows/: deploy-docs.yml
doc/: INSTALL.md
src/: README.md  pyproject.toml
src/viz3dvideo/: about.py
