[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viz3dvideo"
version = "0.1.2"
description = "Visualize a video of 3D graphs in Matplotlib"
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["writing", "translate"]
dependencies = [
    "matplotlib",
    "moviepy"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx-pylibs/Viz3DVideo/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx-pylibs/Viz3DVideo/tree/main/doc"
"Source" = "https://github.com/trucomanx-pylibs/Viz3DVideo"

[project.scripts]
"viz3dvideo-info" = "viz3dvideo.program:main"

[tool.setuptools]
packages = ["viz3dvideo", 
            "viz3dvideo.audio",
            "viz3dvideo.overlay",
            "viz3dvideo.scatter",
            "viz3dvideo.surf"]

[tool.setuptools.package-data]
"viz3dvideo" = ["icons/logo.png"]
